# inference-optimization-exercises

./: .gitignore  generator.py  models.py  pyproject.toml  run_csm.py
data/: GENERATION_PROMPTS.py  SPEAKER_PROMPTS.py
