[project]
name = "inference-optimization-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub==0.36.2",
    "moshi==0.2.13",
    "torch==2.9.0",
    "torchao==0.14.1",
    "torchaudio==2.9.0",
    "torchcodec==0.9",
    "torchtune==0.6.1",
    "transformers==4.57.6",
]
